--- a/introduction of cryptohack.ipynb
+++ b/introduction of cryptohack.ipynb
@@ -106,6 +106,38 @@
     "\n",
     "print(\"\".join(chr(o) for o in integer_list))"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "When we encrypt something the resulting ciphertext commonly has bytes which are not printable ASCII characters. If we want to share our encrypted data, it's common to encode it into something more user-friendly and portable across different systems.\n",
+    "\n",
+    "Hexadecimal can be used in such a way to represent ASCII strings. First each letter is converted to an ordinal number according to the ASCII table (as in the previous challenge). Then the decimal numbers are converted to base-16 numbers, otherwise known as hexadecimal. The numbers can be combined together, into one long hex string.\n",
+    "\n",
+    "Included below is a flag encoded as a hex string. Decode this back into bytes to get the flag.\n",
+    "`63727970746f7b596f755f77696c6c5f62655f776f726b696e675f776974685f6865785f737472696e67735f615f6c6f747d`"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "b'crypto{You_will_be_working_with_hex_strings_a_lot}'\n"
+     ]
+    }
+   ],
+   "source": [
+    "flag = \"63727970746f7b596f755f77696c6c5f62655f776f726b696e675f776974685f6865785f737472696e67735f615f6c6f747d\"\n",
+    "\n",
+    "s = bytes.fromhex(flag)\n",
+    "print(s)"
+   ]
   }
  ],
  "metadata": {
