--- a/introduction of cryptohack.ipynb
+++ b/introduction of cryptohack.ipynb
@@ -138,6 +138,40 @@
     "s = bytes.fromhex(flag)\n",
     "print(s)"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Another common encoding scheme is Base64, which allows us to represent binary data as an ASCII string using an alphabet of 64 characters. One character of a Base64 string encodes 6 binary digits (bits), and so 4 characters of Base64 encode three 8-bit bytes.\n",
+    "\n",
+    "Base64 is most commonly used online, so binary data such as images can be easily included into HTML or CSS files.\n",
+    "\n",
+    "Take the below hex string, decode it into bytes and then encode it into Base64.\n",
+    "\n",
+    "`72bca9b68fc16ac7beeb8f849dca1d8a783e8acf9679bf9269f7bf`"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "b'crypto/Base+64+Encoding+is+Web+Safe/'\n"
+     ]
+    }
+   ],
+   "source": [
+    "import base64\n",
+    "\n",
+    "flag = \"72bca9b68fc16ac7beeb8f849dca1d8a783e8acf9679bf9269f7bf\"\n",
+    "base64_bytes = base64.b64encode(bytes.fromhex(flag))\n",
+    "print(base64_bytes)"
+   ]
   }
  ],
  "metadata": {
