--- a/introduction of cryptohack.ipynb
+++ b/introduction of cryptohack.ipynb
@@ -172,6 +172,74 @@
     "base64_bytes = base64.b64encode(bytes.fromhex(flag))\n",
     "print(base64_bytes)"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Cryptosystems like RSA works on numbers, but messages are made up of characters. How should we convert our messages into numbers so that mathematical operations can be applied?\n",
+    "\n",
+    "The most common way is to take the ordinal bytes of the message, convert them into hexadecimal, and concatenate. This can be interpreted as a base-16/hexadecimal number, and also represented in base-10/decimal.\n",
+    "\n",
+    "Convert the following integer back into a message:\n",
+    "\n",
+    "`11515195063862318899931685488813747395775516287289682636499965282714637259206269`"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "b'crypto{3nc0d1n6_4ll_7h3_w4y_d0wn}'\n"
+     ]
+    }
+   ],
+   "source": [
+    "from Crypto.Util.number import *\n",
+    "\n",
+    "flag = 11515195063862318899931685488813747395775516287289682636499965282714637259206269\n",
+    "result = long_to_bytes(flag)\n",
+    "print(result)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "XOR is a bitwise operator which returns 0 if the bits are the same, and 1 otherwise. In textbooks the XOR operator is denoted by $\\oplus$, but in most challenges and programming languages you will see the caret ^ used instead.\n",
+    "\n",
+    "Given the string label, XOR each character with the integer 13. Convert these integers back to a string and submit the flag as crypto{new_string}."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "crypto{aloha}\n",
+      "crypto{b'aloha'}\n"
+     ]
+    }
+   ],
+   "source": [
+    "str = \"label\"\n",
+    "xor_str = [ord(s) ^ 13 for s in str]\n",
+    "flag = \"\".join([chr(s) for s in xor_str])\n",
+    "print(f\"crypto{{{flag}}}\")\n",
+    "\n",
+    "from pwn import xor\n",
+    "\n",
+    "print(f\"crypto{{{xor(b'label', 13)}}}\")"
+   ]
   }
  ],
  "metadata": {
