--- a/introduction of cryptohack.ipynb
+++ b/introduction of cryptohack.ipynb
@@ -240,6 +240,59 @@
     "\n",
     "print(f\"crypto{{{xor(b'label', 13)}}}\")"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "the XOR have some properties that can be useful for cryptanalysis. \n",
+    "\n",
+    "- Commutative: $A \\oplus B = B \\oplus A$ \n",
+    "- Associative: $A \\oplus (B \\oplus C) = (A \\oplus B) \\oplus C$\n",
+    "  - by the Commutative and Associative properties, we can XOR multiple values together in **any order**.\n",
+    "- Inverse: $A \\oplus A = 0$\n",
+    "- Identity: $A \\oplus 0 = A$"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "```text\n",
+    "KEY1 = a6c8b6733c9b22de7bc0253266a3867df55acde8635e19c73313\n",
+    "KEY2 ^ KEY1 = 37dcb292030faa90d07eec17e3b1c6d8daf94c35d4c9191a5e1e\n",
+    "KEY2 ^ KEY3 = c1545756687e7573db23aa1c3452a098b71a7fbf0fddddde5fc1\n",
+    "FLAG ^ KEY1 ^ KEY3 ^ KEY2 = 04ee9855208a2cd59091d04767ae47963170d1660df7f56f5faf\n",
+    "```\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 22,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "b'crypto{x0r_i5_ass0c1at1v3}'\n"
+     ]
+    }
+   ],
+   "source": [
+    "from pwn import xor\n",
+    "\n",
+    "KEY1 = bytes.fromhex(\"a6c8b6733c9b22de7bc0253266a3867df55acde8635e19c73313\")\n",
+    "KEY2 = xor(bytes.fromhex(\"37dcb292030faa90d07eec17e3b1c6d8daf94c35d4c9191a5e1e\"), KEY1)\n",
+    "KEY3 = xor(bytes.fromhex(\"c1545756687e7573db23aa1c3452a098b71a7fbf0fddddde5fc1\"), KEY2)\n",
+    "FLAG = xor(\n",
+    "    bytes.fromhex(\"04ee9855208a2cd59091d04767ae47963170d1660df7f56f5faf\"),\n",
+    "    KEY1,\n",
+    "    KEY2,\n",
+    "    KEY3,\n",
+    ")\n",
+    "print(FLAG)"
+   ]
   }
  ],
  "metadata": {
