--- a/introduction of cryptohack.ipynb
+++ b/introduction of cryptohack.ipynb
@@ -293,6 +293,95 @@
     ")\n",
     "print(FLAG)"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "For the next few challenges, you'll use what you've just learned to solve some more XOR puzzles.\n",
+    "\n",
+    "I've hidden some data using XOR with a single byte, but that byte is a secret. Don't forget to decode from hex first.\n",
+    "\n",
+    "`73626960647f6b206821204f21254f7d694f7624662065622127234f726927756d`"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 25,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "b'crypto{0x10_15_my_f4v0ur173_by7e}'\n"
+     ]
+    }
+   ],
+   "source": [
+    "from pwn import xor\n",
+    "\n",
+    "origin = bytes.fromhex(\n",
+    "    \"73626960647f6b206821204f21254f7d694f7624662065622127234f726927756d\"\n",
+    ")\n",
+    "\n",
+    "# the origin is XOR one byte key, so travel the key from 0 to 255, the correct result will be the flag start with \"crypto{\"\n",
+    "for i in range(256):\n",
+    "    key = bytes([i])\n",
+    "    result = xor(origin, key)\n",
+    "    if result.startswith(b\"crypto{\"):\n",
+    "        print(result)\n",
+    "        break"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "I've encrypted the flag with my secret key, you'll never be able to guess it.\n",
+    "\n",
+    "Remember the flag format and how it might help you in this challenge!\n",
+    "\n",
+    "\n",
+    "`0e0b213f26041e480b26217f27342e175d0e070a3c5b103e2526217f27342e175d0e077e263451150104`"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 39,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "b\"\\x0e\\x0b!?&\\x04\\x1eH\\x0b&!\\x7f'4.\\x17]\\x0e\\x07\\n<[\\x10>%&!\\x7f'4.\\x17]\\x0e\\x07~&4Q\\x15\\x01\\x04\"\n",
+      "b'DgshPyYEHkgLJiF/JzQuF10OBwo8WxA+JSYhfyc0LhddDgd+JjRRFQEE'\n",
+      "b'crypto{%r~n-LQCn\\x05AUaY6ifjtJ\\x1aJMvX\\x0feb\\x13_l\\x1eGja'\n"
+     ]
+    }
+   ],
+   "source": [
+    "import base64\n",
+    "\n",
+    "# I've encrypted the flag with my secret key, you'll never be able to guess it.\n",
+    "\n",
+    "# Remember the flag format and how it might help you in this challenge!\n",
+    "\n",
+    "\n",
+    "origin = bytes.fromhex(\n",
+    "    \"0e0b213f26041e480b26217f27342e175d0e070a3c5b103e2526217f27342e175d0e077e263451150104\"\n",
+    ")\n",
+    "origin_base64 = base64.b64encode(origin)\n",
+    "print(origin)\n",
+    "print(origin_base64)\n",
+    "\n",
+    "# the flag start with \"crypto{\", so we can use this to find the key\n",
+    "\n",
+    "guess_key = xor(b\"crypto{\", origin[:7])\n",
+    "flag = xor(origin, guess_key)\n",
+    "print(flag)"
+   ]
   }
  ],
  "metadata": {
